[package]
name = "roll"
version = "1.0.0"
authors = ["isirasan <isirasan@mailbox.org>"]
edition = "2018"
license-file = "LICENSE.md"
keywords = ["dice", "tapletop", "pen and paper", "roleplay", "commandline"]
repository = "https://github.com/isirasan/roll/"
readme = "README.md"
description = "command line dice roller for pen&paper and tabletop games"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
round = "0.1.0"